3rdParty/boost/1.66.0/libs/test/doc/examples/example03.output
//[example_output
> example
Running 2 test cases...
test.cpp(22): error: in "boost::bind( &test_class::test_method2, tester )": check false has failed

*** 1 failure is detected in the test module "Master Test Suite"
//]